# crisp-nam

./: .gitignore  README.md  baseline_cif_framingham.json  nested_cv_best_params_synthetic.yaml  nested_cv_detailed_metrics_framingham.csv  nested_cv_detailed_metrics_pbc.csv  nested_cv_metrics_support.xlsx  nested_cv_raw_metrics_support.json  nested_cv_summary_metrics_framingham.csv  nested_cv_summary_metrics_support.csv  package-lock.json  pyproject.toml
.github/workflows/: blog.yml
best_params/: best_params_framingham.yaml  best_params_framingham_deephit.yaml  best_params_pbc.yaml  best_params_support2_deephit.yaml
blog/: INTERACTIVE_COMPONENT_README.md  package-lock.json  package.json  webpack.config.js
blog/public/: index.bundle.js  index.html  (+1 more)
crisp_nam/: __init__.py
data_utils/: __init__.py  load_datasets.py  survival_datasets.py
datasets/: SurvivalDataset.py  framingham_dataset.py  pbc_dataset.py  support_dataset.py  synthetic_dataset.py
dfc-predictions/: main.py
docs/: CONVERSION_SUMMARY.md  README.md
metrics/: calibration.py  discrimination.py  ipcw.py
model/: crisp_nam_model.py  deephit_model.py
nfg/: losses.py  nfg_api.py  nfg_torch.py  utilities.py
train/: config.yaml  train.py  train_deephit_cuda.py  train_nfg.py  tune_optuna_optimized.py
training_scripts/: model_utils.py  train.py  train_deephit.py  train_deephit_cuda.py  train_nested_cv.py  tune_optuna.py  tune_optuna_optimized.py
utils/: README_ONNX.md  compute_baseline_cif.py  convert_saved_model.py  convert_to_onnx.py  loss.py  plotting.py  risk_cif.py  test_onnx_inference.py
(+55 files in other folders)
