[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crisp-nam"
version = "0.1.0"
description = "CRISP-NAM: Competing Risks Interpretable Survival Prediction with Neural Additive Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configargparse>=1.7",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "scikit-survival>=0.24.1",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
]

[tool.hatch.build.targets.sdist]
only-include = ["crisp_nam"]
